syntax = "proto3";

option go_package = "github.com/desain-gratis/common/types/protobuf/contentupload;contentupload";

package contentupload;

// Image represent both image upload config and image display config
message Image {
  enum ScaleDirection {
    WIDTH = 0;
    HEIGHT = 1;
  }
  string id = 1;
  string thumbnail_url = 2; // smaller version of the image
  int32 offset_x = 3;
  int32 offset_y = 4;
  int32 ratio_x = 5; // will only crop if image width is higher
  int32 ratio_y = 6; // will only crop if image height is higher
  string data_url = 7;
  string url = 8;     // full version of the image (can be different ratio)
  int32 scale_px = 9; // scale in px
  ScaleDirection scale_direction = 10; // either: "width" / "height"
  string description = 11;
  repeated string tags = 12;
  double rotation = 13;
}
